Border radius fix for blocked btn groups on mobile view.

--- a/app/css/less/bootstrap-451.css
+++ b/app/css/less/bootstrap-451.css
@@ -6241,10 +6241,24 @@ button::-moz-focus-inner {
     width: 100%;
     vertical-align: inherit;
   }
-  .btn-group .btn {
+  .btn-group > .btn {
     width: 100%;
     padding: 15px;
     margin: 5px 0;
+  }
+  .btn-group > .btn:first-child:not(:last-child):not(.dropdown-toggle) {
+    border-bottom-right-radius: 4px;
+    border-top-right-radius: 4px;
+  }
+  .btn-group > .btn:not(:first-child):not(:last-child):not(.dropdown-toggle) {
+    border-top-right-radius: 4px;
+    border-top-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+  }
+  .btn-group > .btn:last-child:not(:first-child):not(.dropdown-toggle) {
+    border-bottom-left-radius: 4px;
+    border-top-left-radius: 4px;
   }
   .jumbotron {
     text-align: center;
